Refactor authentication context and UI components: Enhance AuthContext with improved user state management, error handling, and token verification. Update login and registration pages for better user experience, including loading states and error messages. Introduce a new Header component for navigation and user actions, and localize text for better accessibility.

--- a/frontend/src/locales/he.json
+++ b/frontend/src/locales/he.json
@@ -12,16 +12,17 @@
   "confirm_password": "אימות סיסמה",
   "name": "שם",
   "register": "הרשמה",
-  "login_success": "התחברת בהצלחה",
+  "login_success": "התחברת בהצלחה!",
+  "login_failed": "שגיאה בהתחברות. אנא נסה שנית",
   "already_have_account": "כבר יש לך חשבון? התחבר כאן",
   "dont_have_account": "אין לך חשבון? הירשם כאן",
-  "register_success": "הרשמתך בוצעה בהצלחה",
+  "register_success": "נרשמת בהצלחה!",
   "manage_users": "ניהול משתמשים",
   "my_trainees": "התלמידים שלי",
   "trainee": "תלמיד",
   "coach": "מאמן",
   "super_admin": "מנהל מערכת",
-  "delete": "מחק",
+  "delete": "מחיקה",
   "role": "תפקיד",
   "actions": "פעולות",
   "coach_management": "ניהול מאמנים",
@@ -31,5 +32,40 @@
   "add_coach": "הוסף מאמן",
   "coach_added": "המאמן נוסף בהצלחה",
   "unauthorized": "אינך מורשה לצפות בדף זה",
-  "trainee_dashboard": "לוח בקרה של תלמיד"
+  "trainee_dashboard": "לוח בקרה של תלמיד",
+  "admin_dashboard": "לוח ניהול",
+  "user_management": "ניהול משתמשים",
+  "items": "פריטים",
+  "schemas": "סכמות",
+  "butterfly_hosts": "אתרים מארחים",
+  "session_expired": "פג תוקף החיבור. אנא התחבר מחדש",
+  "registration_failed": "שגיאה בהרשמה. אנא נסה שנית",
+  "passwords_not_match": "הסיסמאות אינן תואמות!",
+  "admin": "מנהל",
+  "user": "משתמש",
+  "logging_in": "מתחבר...",
+  "registering": "נרשם...",
+  "need_account": "צריך חשבון?",
+  "forgot_password": "שכחת סיסמה?",
+  "login_description": "התחבר למערכת וצפה במידע שלך",
+  "continues": "המשך",
+  "save": "שמירה",
+  "saving": "שומר...",
+  "cancel": "ביטול",
+  "deleting": "מוחק...",
+  "title": "כותרת",
+  "url": "כתובת URL",
+  "location": "מיקום",
+  "add_new": "הוסף חדש",
+  "edit": "עריכה",
+  "search": "חיפוש",
+  "no_results": "לא נמצאו תוצאות",
+  "loading": "טוען...",
+  "butterfly_hosts_desc": "צפייה וניהול אתרים מארחים לשיתוף המידע",
+  "items_desc": "גישה ועדכון של פריטים במערכת",
+  "user_management_desc": "ניהול חשבונות משתמשים והרשאות",
+  "statistics": "סטטיסטיקות",
+  "statistics_desc": "צפייה בנתונים וסטטיסטיקות על פעילות המערכת",
+  "dashboard_description": "מערכת ניהול התוכן מספקת גישה קלה ונוחה לכל הכלים הדרושים לניהול ושיתוף המידע",
+  "create_account": "צור חשבון חדש למערכת"
 }
