--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,20 +1,21 @@
 {
-  "home_page": "Home page",
+  "home_page": "Home",
   "home_welcome": "Welcome to our home page",
-  "login_page": "Login page",
+  "login_page": "Login",
   "password": "Password",
-  "email": "Email",
-  "register_page": "Register page",
+  "email": "Email Address",
+  "register_page": "Register",
   "welcome": "Welcome",
   "coach_dashboard": "Coach Dashboard",
   "logout": "Logout",
   "login": "Login",
   "confirm_password": "Confirm Password",
-  "name": "Name",
+  "name": "Full Name",
   "register": "Register",
-  "login_success": "Login successful",
-  "already_have_account": "Already have an account? Login here",
-  "register_success": "Registration successful",
+  "login_success": "Logged in successfully!",
+  "login_failed": "Login failed. Please try again",
+  "already_have_account": "Already have an account?",
+  "register_success": "Registered successfully!",
   "manage_users": "Manage Users",
   "my_trainees": "My Trainees",
   "trainee": "Trainee",
@@ -30,5 +31,41 @@
   "add_coach": "Add Coach",
   "coach_added": "Coach added successfully",
   "unauthorized": "You are not authorized to view this page",
-  "trainee_dashboard": "Trainee Dashboard"
+  "trainee_dashboard": "Trainee Dashboard",
+  "admin_dashboard": "Admin Dashboard",
+  "user_management": "User Management",
+  "items": "Items",
+  "schemas": "Schemas",
+  "butterfly_hosts": "Butterfly Hosts",
+  "dont_have_account": "Don't have an account? Register here",
+  "session_expired": "Session expired. Please login again",
+  "registration_failed": "Registration failed. Please try again",
+  "passwords_not_match": "Passwords do not match!",
+  "admin": "Administrator",
+  "user": "User",
+  "logging_in": "Logging in...",
+  "registering": "Registering...",
+  "need_account": "Need an account?",
+  "forgot_password": "Forgot password?",
+  "login_description": "Sign in to your account and access your data",
+  "continues": "Continue",
+  "save": "Save",
+  "saving": "Saving...",
+  "cancel": "Cancel",
+  "deleting": "Deleting...",
+  "title": "Title",
+  "url": "URL Address",
+  "location": "Location",
+  "add_new": "Add New",
+  "edit": "Edit",
+  "search": "Search",
+  "no_results": "No results found",
+  "loading": "Loading...",
+  "butterfly_hosts_desc": "View and manage butterfly host websites for data sharing",
+  "items_desc": "Access and update items in the system",
+  "user_management_desc": "Manage user accounts and permissions",
+  "statistics": "Statistics",
+  "statistics_desc": "View data and statistics on system activity",
+  "dashboard_description": "Content management system provides easy access to all the tools needed to manage and share information",
+  "create_account": "Create a new account"
 }
