--- a/frontend/src/locales/he/common.json
+++ b/frontend/src/locales/he/common.json
@@ -2,7 +2,7 @@
   "app": {
     "name": "ShareJSON",
     "welcome": "ברוכים הבאים ל-ShareJSON",
-    "description": "מערכת ניהול התוכן מספקת גישה קלה ונוחה לכל הכלים הדרושים לניהול ושיתוף המידע"
+    "description": "פלטפורמה לניהול ושיתוף קבצי JSON"
   },
   "auth": {
     "login": "התחברות",
@@ -12,13 +12,13 @@
     "password": "סיסמה",
     "confirm_password": "אימות סיסמה",
     "name": "שם מלא",
-    "login_success": "התחברת בהצלחה!",
-    "login_failed": "שגיאה בהתחברות. אנא נסה שנית",
+    "login_success": "התחברת בהצלחה",
+    "login_failed": "התחברות נכשלה, נסה שוב",
     "already_have_account": "כבר יש לך חשבון? התחבר כאן",
     "dont_have_account": "אין לך חשבון? הירשם כאן",
-    "register_success": "נרשמת בהצלחה!",
-    "session_expired": "פג תוקף החיבור. אנא התחבר מחדש",
-    "registration_failed": "שגיאה בהרשמה. אנא נסה שנית",
+    "register_success": "נרשמת בהצלחה",
+    "session_expired": "פג תוקף החיבור, יש להתחבר שוב",
+    "registration_failed": "הרשמה נכשלה, נסה שוב",
     "passwords_not_match": "הסיסמאות אינן תואמות!",
     "logging_in": "מתחבר...",
     "registering": "נרשם...",
@@ -40,10 +40,10 @@
     "user": "משתמש"
   },
   "actions": {
-    "save": "שמירה",
+    "save": "שמור",
     "cancel": "ביטול",
-    "delete": "מחיקה",
-    "edit": "עריכה",
+    "delete": "מחק",
+    "edit": "ערוך",
     "add_new": "הוסף חדש",
     "search": "חיפוש",
     "continues": "המשך",
@@ -59,5 +59,81 @@
     "title": "כותרת",
     "url": "כתובת URL",
     "location": "מיקום"
+  },
+  "common": {
+    "dashboard": "אזור אישי",
+    "menu": "תפריט",
+    "search": "חיפוש",
+    "loading": "טוען...",
+    "save": "שמור",
+    "cancel": "ביטול",
+    "delete": "מחק",
+    "edit": "ערוך",
+    "view": "צפה",
+    "back": "חזרה",
+    "next": "הבא",
+    "prev": "הקודם",
+    "submit": "שלח",
+    "error": "שגיאה",
+    "success": "הצלחה",
+    "warning": "אזהרה",
+    "info": "מידע"
+  },
+  "home": {
+    "hero": {
+      "subtitle": "פלטפורמה חכמה לניהול ושיתוף קבצי JSON",
+      "description": "נהל, ערוך ושתף קבצי JSON בדרך הקלה והבטוחה ביותר. עם ShareJSON, הנתונים שלך מאורגנים, מאובטחים וזמינים מכל מקום.",
+      "dashboard_btn": "לאזור האישי"
+    },
+    "features": {
+      "title": "הפיצ'רים שלנו",
+      "description": "עם ShareJSON, ניהול ושיתוף קבצי JSON הופך לפשוט ואינטואיטיבי. האפליקציה מציעה מגוון תכונות פורצות דרך.",
+      "editing": "עריכת JSON מתקדמת",
+      "api": "API לגישה מרחוק",
+      "sharing": {
+        "title": "שיתוף קל ונוח",
+        "short": "שיתוף קבצים",
+        "description": "שתף את הקבצים שלך בקלות עם כל העולם, פשוט וללא מאמץ"
+      },
+      "schemas": {
+        "title": "ניהול סכמות",
+        "short": "סכמות מותאמות אישית",
+        "description": "צור וערוך סכמות JSON מובנות לנתונים שלך, שמור על מבנה אחיד"
+      },
+      "butterfly": {
+        "title": "פרפרים מארחים",
+        "short": "ניהול מארחים",
+        "description": "תמוך בסביבת עבודה רב-משתמשית עם ניהול מארחים מתקדם"
+      },
+      "security": {
+        "title": "אבטחה ופרטיות",
+        "short": "אבטחה מתקדמת",
+        "description": "מערכת אבטחה חזקה המגינה על הנתונים שלך בכל עת"
+      }
+    },
+    "info": {
+      "what": {
+        "title": "מה זה ShareJSON?",
+        "content": "ShareJSON הוא פלטפורמה חדשנית לשיתוף ואחסון קבצי JSON. האפליקציה מאפשרת למפתחים ומנהלי מערכות לנהל, לאחסן ולשתף נתונים בפורמט JSON בצורה קלה ונוחה."
+      },
+      "who": {
+        "title": "למי זה מתאים?",
+        "content": "האפליקציה מיועדת למפתחים, מנהלי מערכות, צוותי QA ולכל מי שעובד עם קבצי JSON. באמצעות הממשק הידידותי, גם משתמשים שאינם טכניים יכולים ליהנות מהיתרונות של ניהול נתונים מובנה."
+      },
+      "join_now": "הצטרף היום"
+    },
+    "testimonials": {
+      "title": "הצטרפו למאות המשתמשים",
+      "quote1": "״שיפר את העבודה שלי באופן דרמטי״",
+      "author1": "אמיר כ. - מפתח Full Stack",
+      "quote2": "״ניהול הסכמות חסך לנו המון זמן״",
+      "author2": "רונית ל. - מנהלת מוצר"
+    },
+    "cta": {
+      "title": "מוכנים להתחיל?",
+      "description": "הצטרפו למהפכת ה-JSON ושפרו את ניהול הנתונים שלכם כבר היום.",
+      "register_now": "הרשמה עכשיו"
+    },
+    "creator": "הצוות שלכם"
   }
 } 
