Enhance localization support and improve user interface: Add new translation keys for error messages and data handling in both English and Hebrew. Update existing components to utilize localized strings for better user experience. Introduce new data and schema localization files for comprehensive language support.

--- a/frontend/src/locales/en/butterfly.json
+++ b/frontend/src/locales/en/butterfly.json
@@ -31,5 +31,40 @@
     "add_image": "Add Image",
     "upload_image": "Upload Image",
     "load_more": "Load More"
-  }
+  },
+  "loading_hosts": "Loading hosts...",
+  "hosts_title": "Butterfly Hosts",
+  "total_hosts": "Total {{count}} hosts in the system",
+  "no_image": "No image",
+  "add_host_button": "Add Host",
+  "delete_confirm": "Are you sure you want to delete this host?",
+  "server_error_confirm": "Communication issue with the server. Do you want to remove this host from the list anyway?",
+  "host_removed": "Host removed successfully",
+  "host_created": "Host created successfully",
+  "image_uploaded": "Image uploaded successfully",
+  "image_upload_error": "Error uploading image",
+  "uploading_image": "Uploading image...",
+  "failed_load": "Failed to load data",
+  "download_json": "Download JSON",
+  "file_downloaded": "File downloaded successfully",
+  "download_error": "Error downloading file",
+  "search_placeholder": "Search by title or URL...",
+  "filter_all": "All",
+  "no_results_for": "No results found for",
+  "hosts": "hosts",
+  "update_host_details": "Update host details",
+  "enter_new_host_details": "Enter new host details",
+  "enter_title": "Enter title",
+  "enter_url": "Enter URL",
+  "enter_position": "Enter position (e.g. 1, 2, 3)",
+  "position_hint": "e.g. top_right, bottom_center",
+  "upload_new_image": "Upload New Image",
+  "title_required": "Title must contain at least 2 characters",
+  "valid_url": "Please enter a valid URL",
+  "position_required": "Position is required",
+  "logo": "Logo",
+  "optional": "optional",
+  "error_creating": "Error creating host",
+  "error_updating": "Error updating host",
+  "preview": "Preview:"
 } 
