--- a/frontend/src/locales/he/butterfly.json
+++ b/frontend/src/locales/he/butterfly.json
@@ -31,5 +31,43 @@
     "add_image": "הוסף תמונה",
     "upload_image": "העלה תמונה",
     "load_more": "טען עוד"
-  }
+  },
+  "loading_hosts": "טוען אתרים...",
+  "hosts_title": "אתרים מארחים",
+  "total_hosts": "סך הכל {{count}} אתרים במערכת",
+  "no_image": "אין תמונה",
+  "edit_host": "עריכת אתר מארח",
+  "add_host": "הוספת אתר מארח",
+  "add_host_button": "הוסף אתר",
+  "delete_confirm": "האם אתה בטוח שברצונך למחוק את האתר המארח הזה?",
+  "server_error_confirm": "בעיה בתקשורת עם השרת. האם ברצונך להסיר את האתר מהרשימה בכל זאת?",
+  "host_removed": "האתר הוסר בהצלחה",
+  "host_created": "האתר נוצר בהצלחה",
+  "image_uploaded": "התמונה הועלתה בהצלחה",
+  "image_upload_error": "שגיאה בהעלאת התמונה",
+  "uploading_image": "מעלה תמונה...",
+  "failed_load": "נכשל בטעינת הנתונים",
+  "download_json": "הורד JSON",
+  "file_downloaded": "הקובץ הורד בהצלחה",
+  "download_error": "שגיאה בהורדת הקובץ",
+  "search_placeholder": "חיפוש לפי כותרת או כתובת...",
+  "filter_all": "הכל",
+  "no_results_for": "לא נמצאו תוצאות עבור",
+  "load_more": "טען עוד",
+  "hosts": "אתרים",
+  "update_host_details": "עדכן את פרטי האתר המארח",
+  "enter_new_host_details": "הזן את פרטי האתר המארח החדש",
+  "enter_title": "הזן כותרת",
+  "enter_url": "הזן כתובת URL",
+  "enter_position": "הזן מיקום (למשל: 1, 2, 3)",
+  "position_hint": "למשל: top_right, bottom_center",
+  "upload_new_image": "העלאת תמונה חדשה",
+  "title_required": "כותרת חייבת להכיל לפחות 2 תווים",
+  "valid_url": "נא להזין כתובת אתר תקינה",
+  "position_required": "מיקום נדרש",
+  "logo": "לוגו",
+  "optional": "אופציונלי",
+  "error_creating": "שגיאה ביצירת האתר",
+  "error_updating": "שגיאה בעדכון האתר",
+  "preview": "תצוגה מקדימה:"
 } 
