--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -66,6 +66,7 @@
     "search": "Search",
     "loading": "Loading...",
     "save": "Save",
+    "save_changes": "Save Changes",
     "cancel": "Cancel",
     "delete": "Delete",
     "edit": "Edit",
@@ -77,7 +78,33 @@
     "error": "Error",
     "success": "Success",
     "warning": "Warning",
-    "info": "Info"
+    "info": "Info",
+    "home_page": "Home Page",
+    "items": "Items",
+    "schemas": "Schemas",
+    "butterfly_hosts": "Butterfly Hosts",
+    "welcome": "Welcome",
+    "unauthorized": "Unauthorized Access",
+    "fill_all_fields": "Please fill all fields",
+    "dashboard_description": "Welcome to the ShareJSON control center",
+    "statistics": "Statistics",
+    "statistics_desc": "View system statistics",
+    "more": "More",
+    "close": "Close",
+    "butterfly_hosts_desc": "Manage butterfly hosts in the system",
+    "items_desc": "Manage items and content",
+    "roles": {
+      "user": "User",
+      "admin": "Administrator"
+    },
+    "errors": {
+      "login_failed": "Login failed",
+      "server_error": "Server error",
+      "connection_error": "Connection issue with the server. Please try again or check your internet connection.",
+      "no_token": "No token in server response",
+      "no_token_received": "No token received from server",
+      "please_fill_all": "Please fill all required fields"
+    }
   },
   "home": {
     "hero": {
@@ -135,5 +162,52 @@
       "register_now": "Register Now"
     },
     "creator": "Your Team"
+  },
+  "item": {
+    "item_image": "Item Image",
+    "details": "Item Details",
+    "items": "Items",
+    "no_items": "No items found. Create your first item!",
+    "loading": "Loading items...",
+    "not_found": "Item not found",
+    "description": "Description"
+  },
+  "schema": {
+    "schemas": "Dynamic Schemas",
+    "no_schemas": "No schemas found.",
+    "loading": "Loading schemas...",
+    "fields": "Fields",
+    "field_num": "Field #",
+    "required_field": "Required field",
+    "not_found": "Schema not found"
+  },
+  "data": {
+    "data_fields": "Data Fields",
+    "upload_image": "Or upload an image:",
+    "required_mark": "* This field is required",
+    "not_set": "Not set",
+    "no_image": "No image",
+    "data": "Data:",
+    "preview": "Preview:"
+  },
+  "butterfly": {
+    "loading_hosts": "Loading hosts...",
+    "hosts_title": "Butterfly Hosts",
+    "total_hosts": "Total {{count}} hosts in the system",
+    "no_image": "No image",
+    "edit_host": "Edit Host",
+    "add_host": "Add New Host",
+    "preview": "Preview:",
+    "delete_warning": "This action cannot be undone."
+  },
+  "admin": {
+    "user_management": "User Management",
+    "user_management_desc": "Manage users and permissions",
+    "name": "Name",
+    "email": "Email",
+    "role": "Role",
+    "actions": "Actions",
+    "delete_user_error": "Failed to delete user",
+    "load_users_error": "Failed to load users"
   }
 } 
