--- a/frontend/src/locales/he/common.json
+++ b/frontend/src/locales/he/common.json
@@ -114,18 +114,18 @@
     },
     "features": {
       "title": "הפיצ'רים שלנו",
-      "description": "עם ShareJSON, ניהול ושיתוף קבצי JSON הופך לפשוט ואינטואיטיבי. האפליקציה מציעה מגוון תכונות פורצות דרך.",
+      "description": "עם ShareJSON, ניהול ושיתוף קבצי JSON הופך לפשוט ואינטואיטיבי. האפליקציה מציעה מגוון תכונות פורצות דרך לניהול נתונים יעיל ובטוח.",
       "editing": "עריכת JSON מתקדמת",
       "api": "API לגישה מרחוק",
       "sharing": {
         "title": "שיתוף קל ונוח",
         "short": "שיתוף קבצים",
-        "description": "שתף את הקבצים שלך בקלות עם כל העולם, פשוט וללא מאמץ"
+        "description": "שתף את הקבצים שלך בקלות עם כל העולם, פשוט וללא מאמץ. שיתוף באמצעות לינק, הרשאות מתקדמות וגישות שונות"
       },
       "schemas": {
         "title": "ניהול סכמות",
         "short": "סכמות מותאמות אישית",
-        "description": "צור וערוך סכמות JSON מובנות לנתונים שלך, שמור על מבנה אחיד"
+        "description": "צור וערוך סכמות JSON מובנות לנתונים שלך, שמור על מבנה אחיד, וודא תקינות הנתונים באופן אוטומטי"
       },
       "butterfly": {
         "title": "פרפרים מארחים",
@@ -135,17 +135,22 @@
       "security": {
         "title": "אבטחה ופרטיות",
         "short": "אבטחה מתקדמת",
-        "description": "מערכת אבטחה חזקה המגינה על הנתונים שלך בכל עת"
+        "description": "מערכת אבטחה חזקה המגינה על הנתונים שלך בכל עת, הצפנה מתקדמת ובקרת גישה מפורטת"
+      },
+      "api": {
+        "title": "API מתקדם",
+        "short": "גישת API",
+        "description": "גישה מלאה לנתונים דרך ממשק API מתקדם, אינטגרציה פשוטה למערכות קיימות וניהול מרחוק"
       }
     },
     "info": {
       "what": {
         "title": "מה זה ShareJSON?",
-        "content": "ShareJSON הוא פלטפורמה חדשנית לשיתוף ואחסון קבצי JSON. האפליקציה מאפשרת למפתחים ומנהלי מערכות לנהל, לאחסן ולשתף נתונים בפורמט JSON בצורה קלה ונוחה."
+        "content": "ShareJSON הוא פלטפורמה חדשנית לשיתוף ואחסון קבצי JSON. האפליקציה מאפשרת למפתחים ומנהלי מערכות לנהל, לאחסן ולשתף נתונים בפורמט JSON בצורה קלה ונוחה. עם כלים מתקדמים לעריכה, תיקוף ותצוגה של הנתונים, ShareJSON הופך את העבודה עם JSON לפשוטה מתמיד."
       },
       "who": {
         "title": "למי זה מתאים?",
-        "content": "האפליקציה מיועדת למפתחים, מנהלי מערכות, צוותי QA ולכל מי שעובד עם קבצי JSON. באמצעות הממשק הידידותי, גם משתמשים שאינם טכניים יכולים ליהנות מהיתרונות של ניהול נתונים מובנה."
+        "content": "האפליקציה מיועדת למפתחים, מנהלי מערכות, צוותי QA ולכל מי שעובד עם קבצי JSON. באמצעות הממשק הידידותי, גם משתמשים שאינם טכניים יכולים ליהנות מהיתרונות של ניהול נתונים מובנה. צוותי פיתוח יוכלו לשתף נתוני בדיקה, סכמות API ומבני נתונים בצורה פשוטה וברורה."
       },
       "join_now": "הצטרף היום"
     },
@@ -154,11 +159,39 @@
       "quote1": "״שיפר את העבודה שלי באופן דרמטי״",
       "author1": "אמיר כ. - מפתח Full Stack",
       "quote2": "״ניהול הסכמות חסך לנו המון זמן״",
-      "author2": "רונית ל. - מנהלת מוצר"
+      "author2": "רונית ל. - מנהלת מוצר",
+      "quote3": "״ה-API פשוט לשימוש ומאפשר לנו גמישות רבה״",
+      "author3": "דני מ. - ארכיטקט תוכנה"
+    },
+    "useCases": {
+      "title": "שימושים נפוצים",
+      "description": "גלה כיצד ShareJSON יכול לשפר את תהליכי העבודה בארגון שלך ולהפוך את ניהול הנתונים לפשוט יותר",
+      "api": {
+        "title": "פיתוח API",
+        "content": "שמירה ושיתוף של סכמות API, דוגמאות תגובה והתאמות קונפיגורציה בין צוותי פיתוח"
+      },
+      "config": {
+        "title": "ניהול קונפיגורציה",
+        "content": "שמירה, גרסאות ושיתוף של קבצי קונפיגורציה בין סביבות פיתוח שונות"
+      },
+      "data": {
+        "title": "ניהול נתוני בדיקות",
+        "content": "אחסון ושיתוף של נתוני בדיקה בפורמט JSON לשימוש בתהליכי QA ופיתוח"
+      }
+    },
+    "api": {
+      "title": "API חזק ופשוט לשימוש",
+      "description": "גישה מלאה לנתונים שלך דרך ממשק API מתועד היטב. אפשר אינטגרציה פשוטה עם שירותים וכלים אחרים.",
+      "documentation": "צפה בתיעוד ה-API",
+      "feature1": "אינטגרציה פשוטה עם RESTful API",
+      "feature2": "תמיכה ב-SDK לשפות תכנות מובילות",
+      "feature3": "הרשאות גישה מתקדמות",
+      "feature4": "תיעוד API אוטומטי ומקיף",
+      "feature5": "ניהול גרסאות ושינויים"
     },
     "cta": {
       "title": "מוכנים להתחיל?",
-      "description": "הצטרפו למהפכת ה-JSON ושפרו את ניהול הנתונים שלכם כבר היום.",
+      "description": "הצטרפו למהפכת ה-JSON ושפרו את ניהול הנתונים שלכם כבר היום. התחילו בחינם ושדרגו בהתאם לצרכים שלכם.",
       "register_now": "הרשמה עכשיו"
     },
     "creator": "הצוות שלכם"
